# rdf-types

./: Cargo.toml
.github/workflows/: ci.yml
src/: blankid.rs  display.rs  generator.rs  lib.rs  quad.rs  triple.rs  utils.rs
src/dataset/: fallible.rs  isomorphism.rs  mod.rs
src/dataset/graph/: fallible.rs
src/dataset/graph/impl/: btree_graph.rs  indexed_btree_graph.rs
src/dataset/impl/: btree_dataset.rs  indexed_btree_dataset.rs
src/interpretation/: fallible.rs  term.rs
src/interpretation/impl/: indexed.rs  none.rs  vocabulary.rs  vocabulary_mut.rs
src/literal/: mod.rs  type.rs
src/pattern/triple/: canonical.rs  map.rs
src/term/: id.rs  mod.rs
src/vocabulary/: blank_id.rs  iri.rs  mod.rs
src/vocabulary/impl/: none.rs  scoped.rs
src/vocabulary/impl/indexed/: blankid.rs  iri.rs  literal.rs  mod.rs
tests/utils/: iso.rs.template
